@@ -330,12 +330,12 @@ Quoter_Stock_i::disconnect_push_supplier (void)
     <P>To test your changes you need to run three programs,
       first TAO's Naming Service:
 <PRE>
-$ $TAO_ROOT/orbsvcs/Naming_Service/Naming_Service
+$ $TAO_ROOT/orbsvcs/Naming_Service/tao_cosnaming
 </PRE>
     <P>then run TAO's Real-time Event Service
     </P>
 <PRE>
-$ $TAO_ROOT/orbsvcs/Event_Service/Event_Service
+$ $TAO_ROOT/orbsvcs/Event_Service/tao_rtevent
 </PRE>
 
     <P>Now you can run your client:
