@@ -1,3 +1,11 @@
+Fri Sep 24 13:40:59 UTC 2010  Marcel Smit  <msmit@remedy.nl>
+
+        * docs/releasenotes/ftrt_ec.html:
+        * docs/tutorials/Quoter/Event_Service/index.html:
+        * docs/tutorials/Quoter/Naming_Service/index.html:
+        * docs/tutorials/Quoter/RT_Event_Service/index.html:
+          Some updates regarding ORB services rename action
+
 Fri Sep 24 13:12:07 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * TAO_IDL/be/be_global.cpp:
